--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "homepage": "https://github.com/alikil/FIre-detection#readme",
   "dependencies": {
     "@tensorflow/tfjs": "^1.7.0",
+    "keras-js": "^1.0.3",
     "nodemon": "^2.0.2",
+    "opencv4nodejs": "^5.5.0",
+    "python-shell": "^1.0.8",
     "ts-node": "^8.6.2",
     "typescript": "^3.8.3"
   }
