--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.ts",
+    "start": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,11 +19,22 @@
   "homepage": "https://github.com/alikil/FIre-detection#readme",
   "dependencies": {
     "@tensorflow/tfjs": "^1.7.0",
+    "@tensorflow/tfjs-node": "^1.7.0",
+    "elementtree": "^0.1.7",
     "keras-js": "^1.0.3",
+    "node-kmeans": "^1.1.9",
+    "node-pickle": "0.0.2",
     "nodemon": "^2.0.2",
     "opencv4nodejs": "^5.5.0",
+    "pickle": "^0.2.0",
     "python-shell": "^1.0.8",
     "ts-node": "^8.6.2",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "xml-js": "^1.6.11",
+    "xml2js": "^0.4.23"
+  },
+  "devDependencies": {
+    "@types/elementtree": "^0.1.0",
+    "@types/xml2js": "^0.4.5"
   }
 }
