--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\aliki\\.windows-build-tools\\python27\\python.exe"
+    "python.pythonPath": "C:\\Users\\aliki\\AppData\\Local\\Microsoft\\WindowsApps\\python.exe"
 }
